style: reformatting